--- a/courses/machine_learning/deepdive2/introduction_to_tensorflow/solutions/tensors-variables.ipynb
+++ b/courses/machine_learning/deepdive2/introduction_to_tensorflow/solutions/tensors-variables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Tensors and Variables\n",
+    "# Introduction to Tensors and Variables - done\n",
     "\n",
     "**Learning Objectives**\n",
     "\n",
